Completed the implementation of a Banner Ad

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_blue_light"
     tools:context=".SecondActivity">
 
     <TextView
@@ -23,11 +24,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="gotoMainActivity"
-        android:text="Goto Main Activity"
         android:scrollHorizontally="false"
+        android:text="Goto Main Activity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
