--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -5,55 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_light"
-    tools:context=".SecondActivity">
+    tools:context=".FourthActivity">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/second_activity_title"
+        android:id="@+id/fourth_activity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Second Activity"
+        android:text="Fourth Activity"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/coins_count_text_view_second_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/reward_ad_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/second_activity_title" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/reward_ad_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="rewardAdButtonClicked"
-        android:text="Show Reward Ad"
-        app:layout_constraintBottom_toTopOf="@id/button_linear_layout_second_activity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/coins_count_text_view_second_activity" />
-
     <LinearLayout
-        android:id="@+id/button_linear_layout_second_activity"
+        android:id="@+id/button_linear_layout_fourth_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/reward_ad_button">
+        app:layout_constraintTop_toBottomOf="@id/fourth_activity_title">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/goto_main_activity_button_second_activity"
+            android:id="@+id/goto_main_activity_button_fourth_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -62,22 +39,22 @@
             android:text="Goto Main Activity" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/goto_third_activity_button_second_activity"
+            android:id="@+id/goto_second_activity_button_fourth_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:onClick="gotoSecondActivity"
+            android:scrollHorizontally="false"
+            android:text="Goto 2nd Activity" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/goto_third_activity_button_fourth_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:onClick="gotoThirdActivity"
             android:scrollHorizontally="false"
             android:text="Goto 3rd Activity" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/goto_fourth_activity_button_second_activity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:onClick="gotoFourthActivity"
-            android:scrollHorizontally="false"
-            android:text="Goto 4th Activity" />
 
     </LinearLayout>
 
