--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -70,6 +70,15 @@
             android:scrollHorizontally="false"
             android:text="Goto 2nd Activity" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/goto_fourth_activity_button_third_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:onClick="gotoFourthActivity"
+            android:scrollHorizontally="false"
+            android:text="Goto 4th Activity" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
